--- a/homePage.html
+++ b/homePage.html
@@ -17,10 +17,13 @@
                 <img src="cgv.png" height="70px" width="80px">
                 <ul>
                     <li>
-                        <a href="#">Trang Chủ</a>
+                        <a href="homePage.html">Trang Chủ</a>
                     </li>
                     <li>
-                        <a href="#">Phim</a>
+                        <a href="#">Phim Đang Chiếu</a>
+                    </li>
+                    <li>
+                        <a href="#">Phim Sắp Chiếu</a>
                     </li>
                     <li>
                         <a href="#">Rạp</a>
@@ -29,6 +32,7 @@
                         <a href="login.html">Đăng nhập</a>
                     </li>
                 </ul>
+                
             </div>
             <div class="search_user">
                 <input type="text" placeholder="Search..." id="search_user">
@@ -37,42 +41,146 @@
                     <a href="#" class="card">
                         <img src="cat.jpg" alt="">
                         <div class="cont">
-                            <h3>The Cat dadada</h3>
-                            <p>Action, 2021, <span>IMDB</span><i class="bi bi-star-fill"></i> 9.6</p>
+                            <h3>The Cat</h3>
                         </div>
-                    </a>
-                    <a href="#" class="card">
-                        <img src="cat.jpg" alt="">
-                        <div class="cont">
-                            <h3>The Cat dadada</h3>
-                            <p>Action, 2021, <span>IMDB</span><i class="bi bi-star-fill"></i> 9.6</p>
-                        </div>
-                    </a>
-                    <a href="#" class="card">
-                        <img src="cat.jpg" alt="">
-                        <div class="cont">
-                            <h3>The Cat dadada</h3>
-                            <p>Action, 2021, <span>IMDB</span><i class="bi bi-star-fill"></i> 9.6</p>
-                        </div>
-                    </a>
-                    <a href="#" class="card">
-                        <img src="cat.jpg" alt="">
-                        <div class="cont">
-                            <h3>The Cat dadada</h3>
-                            <p>Action, 2021, <span>IMDB</span><i class="bi bi-star-fill"></i> 9.6</p>
-                        </div>
-                    </a>
-                    <a href="#" class="card">
-                        <img src="cat.jpg" alt="">
-                        <div class="cont">
-                            <h3>The Cat dadada</h3>
-                            <p>Action, 2021, <span>IMDB</span><i class="bi bi-star-fill"></i> 9.6</p>
-                        </div>
-                    </a>
+                    </a>   
                 </div>
             </div>
         </nav>
+        <div class="content">
+            <h1 id="title">Morbius</h1>
+            <p>contennnnn</p>
+            <div class="details">
+                <h5 id="gen">Hành động</h5>
+                <h4>2023</h4>
+            </div>
+            <div class="btns">
+                <a href="#" id="trailer"> Trailer </a>
+                <a href="booking.html" id="book">  Đặt Vé </a>
+            </div>
+        </div>
+        <section>
+            <h4>ĐANG CHIẾU</h4>
+            <i class="bi bi-chevron-left"></i>
+            <i class="bi bi-chevron-right"></i>
+            <div class="cards">
+                <a href="#" class="card">
+                    <img src="the_boys.jpg" alt="" class="poster">
+                    <div class="rest_card">
+                        <img src="the_boys2.jpg" alt="">
+                        <div class="cont">
+                            <h4>The Boys</h4>
+                            <div class="sub">
+                                <p>Hành động, 2.10.2023 </p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="#" class="card">
+                    <img src="morbius.jpg" alt="" class="poster">
+                    <div class="rest_card">
+                        <img src="morbius2.jpg" alt="">
+                        <div class="cont">
+                            <h4>Morbius</h4>
+                            <div class="sub">
+                                <p>Hành động, 2.10.2023 </p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="#" class="card">
+                    <img src="nha_ba_nu2.jpg" alt="" class="poster">
+                    <div class="rest_card">
+                        <img src="nha_ba_nu.jpg" alt="">
+                        <div class="cont">
+                            <h4>Nhà Bà Nữ</h4>
+                            <div class="sub">
+                                <p>Hành động, 2.10.2023 </p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="#" class="card">
+                    <img src="end_game.jpg" alt="" class="poster">
+                    <div class="rest_card">
+                        <img src="end_game2.jpg" alt="">
+                        <div class="cont">
+                            <h4>Avengers:Endgame</h4>
+                            <div class="sub">
+                                <p>Hành động, 2.10.2023 </p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="#" class="card">
+                    <img src="aquaman.jpg" alt="" class="poster">
+                    <div class="rest_card">
+                        <img src="aquaman2.jpg" alt="">
+                        <div class="cont">
+                            <h4>Aquaman</h4>
+                            <div class="sub">
+                                <p>Hành động, 2.10.2023 </p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="#" class="card">
+                    <img src="sonic.jpg" alt="" class="poster">
+                    <div class="rest_card">
+                        <img src="sonic2.jpg" alt="">
+                        <div class="cont">
+                            <h4>Sonic 2</h4>
+                            <div class="sub">
+                                <p>Hành động, 2.10.2023 </p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a href="#" class="card">
+                    <img src="slime.jpg" alt="" class="poster">
+                    <div class="rest_card">
+                        <img src="slime2.jpg" alt="">
+                        <div class="cont">
+                            <h4>Slime dataken</h4>
+                            <div class="sub">
+                                <p>Hành động, 2.10.2023 </p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a href="#" class="card">
+                    <img src="4n2c1t.jpg" alt="" class="poster">
+                    <div class="rest_card">
+                        <img src="4n2c1t2.jpg" alt="">
+                        <div class="cont">
+                            <h4>4 năm 2 chàng 1 tình yêu</h4>
+                            <div class="sub">
+                                <p>Hành động, 2.10.2023 </p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a href="#" class="card">
+                    <img src="the_boys.jpg" alt="" class="poster">
+                    <div class="rest_card">
+                        <img src="the_boys2.jpg" alt="">
+                        <div class="cont">
+                            <h4>The Boys</h4>
+                            <div class="sub">
+                                <p>Hành động, 2.10.2023 </p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+            </div>
+        </section>
     </header>
-    <script src="movie.js"></script>
+    <script src="homePage.js"></script>
 </body>
 </html>
